--- a/src/styles/muro.css
+++ b/src/styles/muro.css
@@ -99,11 +99,16 @@ header .icon_exit i{
   border: 0;
   padding: 10px;
   background: none;
-  width: 300px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   font-family: 'Poppins', sans-serif;
   background-color: white;
   cursor: pointer;
+  border-radius: 7px;
+}
+
+.open-popup:hover{
+  background-color: var(--color-azul);
 }
 
 .pop-up{
@@ -327,6 +332,7 @@ header .icon_exit i{
   height: 20px;
   background-size: contain;
   left: 0;
+  cursor: pointer;
 }
 
 @media(max-width: 480px) {
@@ -362,7 +368,7 @@ header .icon_exit i{
     padding: 10px;
     background: none;
     width: 300px;
-    height: 50px;
+    height: 100%;
     font-family: 'Poppins', sans-serif;
     background-color: white;
   }
