--- a/src/styles/muro.css
+++ b/src/styles/muro.css
@@ -83,7 +83,7 @@ header .icon_exit i{
   display: flex;
   position: relative;
   align-items: center;
-  background-color:white;
+  background-color: var(--color-naranja);
   margin: 20px;
   height: 80px;
   width: 45%;
@@ -108,7 +108,7 @@ header .icon_exit i{
 }
 
 .open-popup:hover {
-  background-color: var(--color-azul);
+  background-color: var(--color-naranja);
 }
 
 .pop-up{
@@ -128,6 +128,8 @@ header .icon_exit i{
   font-weight: 600;
   text-align: center;
   padding: 5px 0;
+  background-color: #F2B872;
+  border-radius: 7px;
 }
 .post {
   display: flex;
@@ -137,31 +139,15 @@ header .icon_exit i{
 
 .post .form-post{
   position: absolute;
+  justify-content: center;
+  align-items: center;
   top: 5%;
   margin: 40px 30px;
-  width: 45%;
-  height: 350px;
-  background-color: var(--color-azul);
+  width: 50%;
+  background-color: white;
   border-radius: 7px;
   z-index: 3;
-}
-
-.post .form-post :where(.content-post, .detail-post .privacy){
-  position: relative;
-  display: flex;
-  align-items: center;
-  margin: 10px;
-  
-}
-
-.post .form-post .content-post img{
-  position: relative;
-  max-width: 52px;
-}
-
-.post .form-post .content-post .detail-post{
-  position: relative;
-  margin: 3px 0 0 12px;
+  padding: 10px;
 }
 
 .form-post .content-post .detail-post p{
@@ -170,36 +156,10 @@ header .icon_exit i{
   font-weight: 500;
 }
 
-.form-post .content-post .detail-post .privacy{
-  position: relative;
-  max-width: 120px;
-  cursor: pointer;
-  font-size: 11px;
-  margin-top: 3px;
-  padding: 0 10px;
-  border-radius: 5px;
-  background: #e4e6eb;
-  justify-content: space-between; /* buscar otra .form-posta de separar*/
-}
-
 .reactions{
   grid-column: 1 / 3;
   grid-row: 3;
 }
-
-.reactions span{
-  position: relative;
-  bottom: 5px;
-}
-
-.detail-post .privacy span{
-  position: relative;
-  font-size: 13px;
-  margin-top: 1px;
-  font-weight: 500;
-}
-
-
 
 .detail-post .privacy i:last-child{
   position: relative;
@@ -215,7 +175,6 @@ header .icon_exit i{
   font-size: 14px;
   margin-top: 10px;
   min-height: 175px;
-  padding: 8px 10px;
   text-align: justify;
 }
 
@@ -235,19 +194,19 @@ header .icon_exit i{
   position: relative;
   color: black;
   cursor: pointer;
-  background: var(--color-azul);
+  background: var(--color-naranja);
   font-weight: bold;
 }
 
 .cerrar-post{
   position: absolute;
-  top: 11%;
+  top: 10.5%;
   right: 28%;
   width: 5%;
   border: none;
   z-index: 999;
   border-radius: 7px;
-  background-color: var(--color-azul);
+  background-color: var(--color-naranja);
   font-size: 22px;
   cursor: pointer;
 }
@@ -258,7 +217,6 @@ header .icon_exit i{
 }
 
 .form-post .publicar-post{
-  top: -6px;
   border: none;
   width: 100%;
   height: 50px;
@@ -386,7 +344,6 @@ header .icon_exit i{
     top: 100px;
     width: 100%;
     margin: 40px 30px;
-    height: 350px;
     background-color: var(--color-azul);
     border-radius: 7px;
     z-index: 3;
@@ -483,7 +440,7 @@ header .icon_exit i{
     position: relative;
     color: black;
     cursor: pointer;
-    background: var(--color-azul);
+    background: var(--color-naranja);
     font-weight: bold;
   }
 
@@ -495,7 +452,7 @@ header .icon_exit i{
     border: none;
     z-index: 999;
     border-radius: 7px;
-    background-color: var(--color-azul);
+    background-color: var(--color-naranja);
     font-size: 22px;
     cursor: pointer;
   }
